solved z-index hover and onclick problems

--- a/css/go.css
+++ b/css/go.css
@@ -2223,6 +2223,7 @@ html.js,
   position: absolute;
   left: 434px;
   top: 100px;
+  z-index: 4;
 }
 .game__game__selection__item {
   width: 700px;
@@ -2251,6 +2252,9 @@ html.js,
   -o-transform-origin: top left;
   /* Opera */
   margin-top: 32px;
+}
+.game__game__selection__item:hover {
+  background-position-x: -710px;
 }
 .game__game__selection__item__text {
   font-size: 30px;
